<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "NIV84 Plus"><!ENTITY author "Mr. Aaron Baffour-Awuah">]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="title_activity_main">&appname;</string>
    <string name="title_activity_foreword">Foreword</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_comments">Verse Comments</string>
    <string name="menu_foreword">Foreword</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send Your Comment</string>
    <string name="menu_rate">Rate &appname;</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_key_zoom">zoomLevel</string>
    <string name="pref_key_bible_versions">bible_versions</string>
    <string name="pref_key_two_column_display_enabled">two_column_display_enabled</string>
    <bool name="pref_default_two_column_display_enabled">true</bool>
    <string name="two_column_display_enabled_title">Read Multiple Versions in Two Columns</string>
    <string name="two_column_display_enabled_summary">By default, top 2 bible versions are
        displayed for reading side by side. Uncheck to select "single column mode",
        in which more than 2 multiple bible versions can be arranged vertically.</string>
    <string name="pref_key_keep_screen_awake">screen_wake_option</string>
    <string name="pref_key_sort_bookmarks_by_date">bookmark_sort_order</string>
    <string name="pref_default_zoom">100</string>
    <string name="pref_default_bible_versions">niv1984 kjv1769</string>
    <bool name="pref_default_keep_screen_awake">true</bool>
    <bool name="pref_default_sort_bookmarks_by_date">false</bool>
    <string name="pref_key_version_check">About &appname;</string>
    <string name="sorted_bible_versions_title">Sorted Bible Versions</string>
    <string name="version_check_summary">Tap to view current version and check for updates</string>

    <string name="zoom_title">Bible Reading Text Zoom Level</string>
    <string name="action_move_up">Move Up</string>
    <string name="action_move_down">Move Down</string>
    <string name="display_book_pref_instruction">Select a bible version and use up/down buttons to
        order it by preference, with most preferred at the top.\nThen click OK to confirm.</string>

    <string name="pref_key_single_column_version_count">single_column_count</string>
    <string name="pref_default_single_column_version_count">2</string>
    <string name="single_column_version_count_title">Single Column Mode Version Display Limit</string>

    <string name="tab_text_1">Books</string>
    <string name="tab_text_2">Search</string>
    <string name="screen_wake_option_title">Keep screen on during reading</string>
    <string name="screen_wake_option_summary">Screen will still be turned off after 5 minutes of inactivity</string>
    <string name="bookmark_sort_option_title">Sort bookmarks by access date</string>
    <string name="bookmark_sort_option_summary">If set, most recently opened bookmarks will appear at
        the top. Else bookmarks are sorted by title</string>
    <string name="action_reset_to_default">Reset to Default</string>
    <string name="label_search">Search</string>
    <string name="search_pref_bible_label">Bible Version to search: <b>%s</b></string>
    <string name="switchToPrefText">Switch To Normal View</string>
    <string name="highlight_mode_title">Copy/Highlight Mode</string>
    <string name="search_result_mode_title">Search Result</string>
    <string name="bookmark_mode_title">Bookmark: %s</string>
    <string name="message_loading_in_progress">Loading %s</string>
    <string name="action_add_highlight">Highlight</string>
    <string name="action_remove_highlight">Unhighlight</string>
    <string name="action_chapter_switch">Change Chapter</string>
    <string name="action_book_switch">Change Book</string>
    <string name="action_enter_copy_mode">Enter Copy/Highlight Mode</string>
    <string name="action_exit_copy_mode">Exit Copy/Highlight Mode</string>
    <string name="message_book_loading_unfinished">Book loading in progress...</string>
    <string name="message_no_highlightable_content">No highlightable content found in selection</string>
    <string name="dialog_title_change_chapter">Change Chapter</string>
    <string name="dialog_title_change_book">Change Book</string>
    <string name="dialog_title_select_bible_version">Select Version</string>
    <string name="message_already_at_first_chapter">Currently in first chapter</string>
    <string name="message_already_at_last_chapter">Currently in last chapter</string>
    <string name="message_already_at_first_book">Currently in first book</string>
    <string name="message_already_at_last_book">Currently in last book</string>
    <integer name="chapterSelectionGridColumnCount">3</integer>

    <string name="action_ok">OK</string>
    <string name="action_rate">Rate &appname;</string>
    <string name="action_share">Share</string>
    <string name="action_feedback">Your Comment</string>
    <string name="action_update">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="share">Share &appname;</string>
    <string name="share_message">Free offline Bible in NIV (1984 revision with footnotes)
        and KJV, with support for reading both in parallel. No ads.
        Download from %s</string>
    <string name="feedback_email">contact.niv1984@gmail.com</string>
    <string name="feedback_subject">&appname; Feedback</string>
    <string name="feedback_title">Your Comment</string>
    <string name="app_company">Aaronic Substances</string>
    <string name="current_version">Version %1$s %2$s</string>
    <string name="version_check"> (checking for latest version&#8230;)</string>
    <string name="version_check_result_outdated_message"> (latest version is %1$s)</string>
    <string name="version_check_failed"> (latest version check failed)</string>
    <string name="version_up_to_date"> (up to date)</string>
    <string name="version_out_of_date_dialog_title">App is outdated</string>
    <string name="copyright_text">\u00A9 %1$s %2$s. All rights reserved.</string>
    <string name="label_search_kind">How to perform search action?</string>
    <string name="phraseSearchKind">Search for phrases starting with entire search box contents</string>
    <string name="wordSearchKind">Search for any of the words in search box</string>
    <string name="label_word_search_results">Word Search Results for</string>
    <string name="label_phrase_search_results">Phrase Search Results for</string>
    <string name="title_bookmark_list">Bookmarks</string>
    <string name="title_bookmark_detail">Bookmark Detail</string>
    <string name="action_bookmark_create">Create Bookmark</string>
    <string name="action_create">Create</string>
    <string name="action_bookmark_open">Open</string>
    <string name="message_loading">Loading...</string>
    <string name="message_bookmark_count">%d bookmark(s) found.</string>
    <string name="empty_bookmarks">No bookmarks found.\nCreated bookmarks will appear here.</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="deletion_confirmation">The selected items will be deleted.</string>
    <string name="nothing_selected">No items have been selected</string>
    <string name="too_many_search_items_error">Failed to continue search with so many words. Please reduce to 10 or less and try again.</string>
    <string name="help_to_exit_about_browser">Just in case you want to exit this screen, kindly use the up arrow at the top left corner to do so.</string>
</resources>
