<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        app:key="@string/pref_key_zoom"
        app:defaultValue="@string/pref_default_zoom"
        app:entries="@array/zoom_entries"
        app:entryValues="@array/zoom_values"
        app:title="@string/zoom_title"
        app:useSimpleSummaryProvider="true" />

    <com.aaronicsubstances.niv1984.ui.settings.DisplayBookPreference
        android:key="@string/pref_key_bible_versions"
        android:title="@string/sorted_bible_versions_title"
        android:defaultValue="@string/pref_default_bible_versions"
        android:positiveButtonText="@string/action_ok"
        android:negativeButtonText="@string/action_cancel"
        app:useSimpleSummaryProvider="true"/>

    <ListPreference
        app:key="@string/pref_key_multiple_version_display"
        app:defaultValue="@string/pref_default_multiple_version_display"
        app:entries="@array/multiple_version_display_entries"
        app:entryValues="@array/multiple_version_display_values"
        app:title="@string/multiple_version_display_title"
        app:useSimpleSummaryProvider="true" />

    <!--<ListPreference
        app:key="@string/pref_key_single_column_version_count"
        app:defaultValue="@string/pref_default_single_column_version_count"
        app:entries="@array/single_column_version_count_entries"
        app:entryValues="@array/single_column_version_count_entries"
        app:title="@string/single_column_version_count_title"
        app:useSimpleSummaryProvider="true" />-->

    <SwitchPreferenceCompat
        android:key="@string/pref_key_keep_screen_awake"
        android:title="@string/screen_wake_option_title"
        android:summary="@string/screen_wake_option_summary"
        android:defaultValue="@bool/pref_default_keep_screen_awake"/>

    <SwitchPreferenceCompat
        android:key="@string/pref_key_sort_bookmarks_by_date"
        android:title="@string/bookmark_sort_option_title"
        android:summary="@string/bookmark_sort_option_summary"
        android:defaultValue="@bool/pref_default_sort_bookmarks_by_date"/>

    <com.aaronicsubstances.niv1984.ui.settings.VersionCheckPreference
        android:key="version_check"
        android:title="@string/pref_key_version_check"
        android:summary="@string/version_check_summary"
        app:useSimpleSummaryProvider="true"/>
</PreferenceScreen>
