<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/menu_home"
        android:checkable="true"
        android:checked="true"/>
    <item
        android:id="@+id/nav_bookmarks"
        android:icon="@drawable/ic_bookmarks_24dp"
        android:title="@string/menu_bookmarks" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_info_outline_24dp"
        android:title="@string/menu_about" />

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_review_24dp"
                android:title="@string/menu_rate" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_email_24dp"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
